# knotjob_python

./: .gitignore  README.rst  pyproject.toml  setup.py
java/: MANIFEST.MF  build.sh  knotjob_cmd_line.sh  knotjob_gui.sh  test_commands.txt  test_knots.txt
java/KnotJob/: README.TXT  Troubleshooting.txt
java/KnotJob/Documentation/: Combine Crossings.rtf  Graded s-invariants.rtf  Khovanov cohomology.rtf  Lipshitz-Sarkar Invariants.rtf  Stable Homotopy Types.rtf  s-Invariants.rtf
java/KnotJob/Knots/: 12a0001-12a1288.kjb  FourTor.kjb  KnotsSq1.kjb  L02a001-L11n459.kjb  Rolfsen.kjb  StrGrade.kjb
java/KnotJob/knotjob/: Calculation.java  Calculator.java  Comparer.java  FilterBusiness.java  Knobster.java  KnotButtons.java  KnotFileConverter.java  KnotJob.java  KnotJobCommand.java  LinkLoader.java  LinkSaver.java  Options.java
java/KnotJob/knotjob/diagrams/: CircleDiagram.java  DrawComplex.java  Edge.java  GraphicDiagram.java  GraphicalDiagram.java  PointMover.java  SComplex.java  SaveDiagram.java  ShowDiagram.java  Vertex.java
java/KnotJob/knotjob/dialogs/: BLTFilterDialog.java  CalculationDialog.java  CalculationDialogWrap.java  CharDialog.java  CombDialogWrap.java  CompDialog.java  CompFilterDialog.java  CreateLinkDialog.java  DiagramFrame.java  DiagramFrame3D.java  DialogWrap.java  ExportDialog.java  FilterCreateDialog.java  GirthDialogWrap.java  ImportDialog.java  InfoDialog.java  KhovDialog.java  LoadDialog.java  MirrorLink.java  NiceSlTDialog.java  OpenSelectDialog.java  OptionDialog.java  ReducedDialog.java  (+15 more)
python_src/: __init__.py  core.py  test.py
(+196 files in other folders)
